tests/fixtures/invalid/pow_int_int_float.py
# Cannot call pow() with Int, Int, Float
x = pow(1, 1, 1.0)
